# TD-Checker

./: LICENCE  README.md  pyproject.toml  requirements.txt  setup.py
TD Checker/: Main.py  __init__.py
