[build-system]
requires = ["setuptools>=61.0" , "pandas>=2.1.3" , "requests>=2.31.0"]
build-backend = "setuptools.build_meta"
[project]
name = "TD Checker"
version = "0.1.1"
authors = [
  { name="Ali Heidarzadeh", email="ImRoshak@gmail.com" },
]
description = "App From Check TSETMC & DDN With FIXINCOME"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"